# easyunfold

./: .buildinfo  .gitignore  .lfsconfig  .pre-commit-config.yaml  .pylintrc  404.html  CITATION.cff  LICENSE  README.md  cli.html  examples.html  genindex.html  guide.html  index.html  installation.html  mkdocs.yml  mkgendocs.yml  objects.inv  publications.html  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  sitemap.xml  theory.html  tutorial.html
.github/workflows/: ci.yaml  docs-deploy.yaml  docs.yaml  draft-PDF.yml
_sources/: cli.rst  examples.md  index.md  installation.md  publications.md  references.md  theory.md  tutorial.md
_sources/apidocs/: index.rst
_sources/apidocs/easyunfold/: easyunfold.cli.md  easyunfold.effective_mass.md  easyunfold.md  easyunfold.plotting.md  easyunfold.procar.md  easyunfold.unfold.md  easyunfold.utils.md  easyunfold.vasp_constant.md  easyunfold.wavecar.md  easyunfold.wavefun.md
_sources/examples/: example_mgo.md  example_nabis2.md  example_si211_castep.md  example_si222.md
apidocs/: index.html
apidocs/easyunfold/: easyunfold.cli.html  easyunfold.effective_mass.html  easyunfold.html  easyunfold.plotting.html  easyunfold.procar.html  easyunfold.unfold.html  easyunfold.utils.html  easyunfold.vasp_constant.html  easyunfold.wavecar.html  easyunfold.wavefun.html
cli/: index.html
docs/: .gitignore  automate_mkdocs.py  cli.md  cli.rst  conf.py  example_mgo.md  example_nabis2.md  example_si222.md  examples.md  guide.md  index.md  installation.md  publications.md  references.md  theorey.md  theory.md  tutorial.md
docs/examples/: example_mgo.md  example_nabis2.md  example_si211_castep.md  example_si222.md
docs/sources/: index.md
docs_sphinx/: conf.py  examples.md  guide.md  index.md  theory.md
docs_sphinx/examples/: example_nabis2.md
easyunfold/: __init__.py  cli.py  effective_mass.py  plotting.py  procar.py  unfold.py  utils.py  vasp_constant.py  wavecar.py  wavefun.py
easyunfold/pyvaspwfc/: __init__.py  band_order.py  nac.py  paw.py  procar.py  unfold.py  vaspwfc.py
example_mgo/: index.html
example_nabis2/: index.html
example_si222/: index.html
examples/: .gitignore  example_mgo.html  example_nabis2.html  example_si211_castep.html  example_si222.html
examples/MgO/: KPOINTS_easyunfold  POSCAR  README.md  easyunfold.json  effective-mass.ipynb  unfold.sh
examples/MgO/MgO/: INCAR  KPOINTS  KPOINTS_scf  POSCAR  run.sh
examples/MgO/MgO_super/: INCAR  KPOINTS_scf
examples/MgO/conv_222/: .gitattributes  KPOINTS_band  KPOINTS_easyunfold  README.md  easyunfold.json  mgo_conv_222.vasp  mgo_prim.vasp
examples/MgO/v_O_0_YT_tutorial/: POSCAR
examples/NaBiS2/: KPOINTS  POSCAR  README.md
examples/Si-castep/: README.md  Si_prim.cell  band.cell
examples/Si-castep/Si_211_band/: Si_211_band-out.cell  Si_211_band.bands  Si_211_band.cell  Si_211_band.param
examples/Si-castep/Si_211_unfold/: easyunfold_sc_kpoints.param
examples/Si222/: KPOINTS_easyunfold  KPOINTS_no-expand  KPOINTS_no_expand  README.md  easyunfold.json  no-expand.json  no_expand.json  unfold.sh  unfold_no_exapnd.sh  unfold_no_expand.sh
guide/: index.html
installation/: index.html
paper/: .gitignore  compile.sh  paper.bib  paper.md
search/: search_index.json
sources/: index.html
tests/: .gitignore  conftest.py  test_cli.py  test_effective_mass.py  test_plotting.py  test_procar.py  test_unfold.py  test_utils.py
tests/test_data/: PROCAR  mgo.json
theorey/: index.html
theory/: index.html
(+58 files in other folders)
