[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "easyunfold"
authors = [{name = "Bonan Zhu", email = "zhubonan@outlook.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    ]
dynamic = ["version", "description"]
requires-python = ">=3.7"

dependencies = ["scipy", "numpy", "matplotlib", "ase", "spglib", "click", "monty", "tqdm", "tabulate", "colormath"]

[project.urls]
"Homepage" = "https://github.com/SMTG-UCL/easyunfold"
"Documentation" = "https://smtg-ucl.github.io/easyunfold/"

[project.scripts]
easyunfold = "easyunfold.cli:easyunfold"

[project.optional-dependencies]
doc = [
    "sphinx-click>=4,<5", "sphinx-autodoc2>=0.4,<0.5", "sphinx-book-theme>=1,<2", "sphinx-copybutton>=0.3,<0.4",
    "myst-parser[linkify]", "sphinx>=6,<7"
]
test = ["pytest", "pytest-cov", "coverage"]
