[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "easyunfold"
authors = [{name = "Bonan Zhu", email = "zhubonan@outlook.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    ]
dynamic = ["version", "description"]
requires-python = ">=3.7"

dependencies = ["scipy~=1.0", "numpy~=1.0", "matplotlib~=3.0", "ase~=3.14", "spglib~=2.0", "click", "monty", "tqdm~=4.0",
                "tabulate~=0.8", "colormath~=3.0",
                "castepxbin~=0.3.0", "castepinput~=0.1"]

[project.urls]
"Homepage" = "https://github.com/SMTG-UCL/easyunfold"
"Documentation" = "https://smtg-ucl.github.io/easyunfold/"

[project.scripts]
easyunfold = "easyunfold.cli:easyunfold"

[project.optional-dependencies]
doc = [
    "sphinx-click>=4,<5", "sphinx-autodoc2>=0.4,<0.5", "sphinx-book-theme>=1,<2",
    "sphinx-copybutton>=0.3,<0.4", "myst-parser[linkify]", "sphinx>=6,<7"
]
test = ["pytest", "pytest-cov", "coverage"]
pre-commit = ["pre-commit", "pylint~=2.11"]
